--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "intervention/image": "^3.9",
         "janboddez/laravel-indieauth": "@dev",
         "janboddez/laravel-webmention": "@dev",
         "laravel/framework": "^11.9",
