--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^3.9",
         "janboddez/laravel-indieauth": "@dev",
         "janboddez/laravel-webmention": "@dev",
+        "kornrunner/blurhash": "^1.2",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
