--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,17 @@
 /storage/*.key
 /storage/pail
 /vendor
+*.log
 .env
-.env.backup
-.env.production
+.env.*
 .phpactor.json
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
 auth.json
-npm-debug.log
-yarn-error.log
 /.fleet
 /.idea
 /.vscode
 /.zed
 /app/Console/Commands/*
+/functions.php
